--- a/explore-card.html
+++ b/explore-card.html
@@ -30,8 +30,8 @@
      <!-- Collect the nav links, forms, and other content for toggling -->
      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="explore-card.html">Explore</a></li>
+        <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="explore-card.html">Explore</a></li>
         <li><a href="market.html">MarketPlace</a></li>
         <div class="login-register">
         	<li><a href="login.html">Login</a></li>
@@ -44,23 +44,6 @@
  </div><!-- /.container-fluid -->
 </nav>
 
-<div class="header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <div class="text-header">
-          <h1>CERANA</h1>
-          <p class="italic">"Jangan menunggu untuk membeli properti, belilah properti dan tunggulah."</p>
-          <p>Properti adalah satu dari pertahanan hebat terakhir yang mengizinkan jiwa kepengusahaan yang sesungguhnya. Cara menciptakan passive income lebh besar dari biaya hidup adalah dengan berinvestasi dalam bisnis properti.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="bg-header"></div>
-  <div class="gambar-header">
-    <img src="src/img/properti-9.png"/>
-  </div>
-</div>
 
 <!--
 <div id="terbaru">
@@ -80,17 +63,39 @@
 </div>
 </div>
 -->
-
 <!-- BAGIAN CARD TOP TRENDING -->
 <div id="section-top-trending">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h4>Top Trending</h4>
-        <div class="bintang"></div>
-        <a class="lihat-semua" href="top-trending.html">Lihat Semua <span class="panah-kanan"></span></a>
+
+  <!-- second navbar -->
+  <div class="second-navbar" style="background: transparent !important;">
+    <div class="container">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Masukan kata kunci..." aria-describedby="basic-addon1">
+        <span class="input-group-btn">
+          <button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button>
+        </span>
+
+        <div class="filter">
+          <select class="form-control">
+            <option>Terbaru</option>
+            <option>Termurah</option>
+            <option>Termahal</option>
+            <option>Terstrategis</option>
+          </select>
+        </div>
+        <div class="filter">
+          <select class="form-control">
+            <option>Rumah</option>
+            <option>Tanah</option>
+            <option>Apartement</option>
+            <option>Kontrakan</option>
+          </select>
+        </div>
       </div>
     </div>
+  </div>
+  <!-- second navbar -->
+  <div class="container">
 
     <div class="row">
       <div class="col-md-4">
@@ -223,6 +228,8 @@
   <p>hari lagi</p>
 </div>
 
+
+
 <div class="card-footer">
   <div class="campaign-postby">
     <img src="src/img/img1.jpg"/>
@@ -252,30 +259,14 @@
 </div>
 </div>
 </div>
-
-</div>
-</div>
-<!-- ----------- -->
-
-
-<!-- BAGIAN CARD TERBARU -->
-<div id="section-terbaru">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h4>Terbaru</h4>
-        <a class="lihat-semua" href="top-trending.html">Lihat Semua <span class="panah-kanan"></span></a>
-      </div>
-    </div>
-
     <div class="row">
       <div class="col-md-4">
 
        <div class="card">
         <div class="image-card" style="background:url(src/img/lahan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
         <div class="content-card">
-          <h4><a href="#">Membeli tanah lokasi strategis</a></h4>
-          <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
+          <h4><a href="detail-card.html">Membeli tanah lokasi strategis</a></h4>
+          <p><a href="detail-card.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
         </div>
 
         <div class="progress-place">
@@ -399,166 +390,7 @@
   <p>hari lagi</p>
 </div>
 
-<div class="card-footer">
-  <div class="campaign-postby">
-    <img src="src/img/img1.jpg"/>
-    <p>
-      <span class="abu-gelap">by </span>
 
-      <a class="abu-gelap-tebal" href="">M Arinal Ridho</a>
-    </p>
-  </div>
-  <div class="campaign-action">
-    <div class="dropdownmenu">
-      <a class="link more" href="#"></a>
-      <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
-        <a href="#">Report User</a>
-        <a href="#">Report Spam</a>
-        <a href="#">Lapor Penipuan</a>
-      </div>
-    </div>
-    <a class="link bookmark" href="#"></a>
-    <a class="link twitter" href="#"></a>
-    <a class="link fb" href="#"></a>
-    <a class="link ig" href="#"></a>
-    <a class="link copylink" href="#"></a>
-  </div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-md-4">
-
-   <div class="card">
-    <div class="image-card" style="background:url(src/img/lahan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
-    <div class="content-card">
-      <h4><a href="#">Membeli tanah lokasi strategis</a></h4>
-      <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
-    </div>
-
-    <div class="progress-place">
-      <div class="progress-wrap progress" data-progress-percent="95">
-        <div class="progress-bar progress"></div>
-      </div>
-    </div>
-
-    <div class="info-card">
-      <h5 class="biru">Rp 1.075.908.500</h5>
-      <p>dibutuhkan  Rp 1.091.000.000</p>
-    </div>
-    <div class="info-card kanan">
-      <h5 class="biru">10</h5>
-      <p>hari lagi</p>
-    </div>
-
-    <div class="card-footer">
-      <div class="campaign-postby">
-        <img src="src/img/img1.jpg"/>
-        <p>
-          <span class="abu-gelap">by </span>
-
-          <a class="abu-gelap-tebal" href="">M Arinal Ridho</a>
-        </p>
-      </div>
-      <div class="campaign-action">
-        <div class="dropdownmenu">
-          <a class="link more" href="#"></a>
-          <div class="dropdownkonten">
-            <a href="#">Report Campaign</a>
-            <a href="#">Report User</a>
-            <a href="#">Report Spam</a>
-            <a href="#">Lapor Penipuan</a>
-          </div>
-        </div>
-        <a class="link bookmark" href="#"></a>
-        <a class="link twitter" href="#"></a>
-        <a class="link fb" href="#"></a>
-        <a class="link ig" href="#"></a>
-        <a class="link copylink" href="#"></a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="col-md-4">
-
- <div class="card">
-  <div class="image-card" style="background:url(src/img/bangunan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
-  <div class="content-card">
-    <h4><a href="#">Membangun Super Mall di Purwokerto</a></h4>
-    <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
-  </div>
-
-  <div class="progress-place">
-    <div class="progress-wrap progress" data-progress-percent="38">
-      <div class="progress-bar progress"></div>
-    </div>
-  </div>
-
-  <div class="info-card">
-   <h5 class="biru">Rp 1.075.908.500</h5>
-   <p>dibutuhkan  Rp 1.091.000.000</p>
- </div>
- <div class="info-card kanan">
-  <h5 class="biru">120</h5>
-  <p>hari lagi</p>
-</div>
-
-<div class="card-footer">
-  <div class="campaign-postby">
-    <img src="src/img/img1.jpg"/>
-    <p>
-      <span class="abu-gelap">by </span>
-
-      <a class="abu-gelap-tebal" href="">M Arinal Ridho</a>
-    </p>
-  </div>
-  <div class="campaign-action">
-    <div class="dropdownmenu">
-      <a class="link more" href="#"></a>
-      <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
-        <a href="#">Report User</a>
-        <a href="#">Report Spam</a>
-        <a href="#">Lapor Penipuan</a>
-      </div>
-    </div>
-    <a class="link bookmark" href="#"></a>
-    <a class="link twitter" href="#"></a>
-    <a class="link fb" href="#"></a>
-    <a class="link ig" href="#"></a>
-    <a class="link copylink" href="#"></a>
-  </div>
-</div>
-</div>
-</div>
-
-<div class="col-md-4">
-
- <div class="card">
-  <div class="image-card" style="background:url(src/img/properti-4.png);  background-size: 100%; background-repeat: no-repeat;"></div>
-  <div class="content-card">
-    <h4><a href="#">Membangun Cafe and Restaurant di Teluk</a></h4>
-    <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
-  </div>
-
-  <div class="progress-place">
-    <div class="progress-wrap progress" data-progress-percent="38">
-      <div class="progress-bar progress"></div>
-    </div>
-  </div>
-
-  <div class="info-card">
-   <h5 class="biru">Rp 1.075.908.500</h5>
-   <p>dibutuhkan  Rp 1.091.000.000</p>
- </div>
- <div class="info-card kanan">
-  <h5 class="biru">62</h5>
-  <p>hari lagi</p>
-</div>
 
 <div class="card-footer">
   <div class="campaign-postby">
@@ -591,78 +423,21 @@
 </div>
 
 </div>
+<!-- pagination -->
+<div class="pagination">
+  <div class="container text-center">
+    <div class="btn-group" role="group" aria-label="...">
+      <button type="button" class="btn btn-default"><</button>
+      <button type="button" class="btn btn-default">1</button>
+      <button type="button" class="btn btn-default">2</button>
+      <button type="button" class="btn btn-default">...</button>
+      <button type="button" class="btn btn-default">></button>
+    </div>
+  </div>
 </div>
+</div>
+
 <!-- ----------- -->
-
-
-<div class="wrap">
-  <div id="section-ayo">
-    <div class="bungkus">
-
-      <div class="row">
-        <div class="grid-12 putih text-center">
-          <h4 class="biru-gelap">Ayo investasi bersama untuk kaya bersama !</h4>
-        </div>
-
-        <div class="grid-3"></div>
-        <div class="grid-6 abu-gelap">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          </p>
-        </div>
-
-
-        <div class="grid-12">
-          <div class="text-center tombolayo">
-            <a href="#" class="tombol tombol-biru putih">Pilih Card</a>
-          </div>
-
-        </div>
-      </div>
-
-
-    </div>
-  </div>
-</div>
-
-
-<div id="section-subs">
-  <div class="bungkus">
-    <div class="row">
-      <div class="grid-12 text-center">
-        <h4 class="putih">Jadilah yang pertama kami hubungi</h4>
-        <div class="input-subscribe">
-          <form id="subscribeform" action="#" method="POST">
-            <input type="text" id="email" name="email" placeholder="Email anda ..."/>
-            <br/>
-            <input type="submit" name="submit" value="Subscribe" id="myBtn" />
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div id="modal-subscribe" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <div class="modal-header ">
-      <span class="close">      <img src="src/img/close.svg"/></span>
-      <img src="src/img/success.svg"/>
-      
-    </div>
-    <div class="modal-body text-center">
-      <h4>Berhasil !</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      </p>
-    </div>
-    <div class="modal-footer text-center">
-      <a href="javascript:void(0)" id="back-to-home" class="tombol tombol-kuning">Tutup pesan ini</a>
-    </div>
-  </div>
-
-</div>
 
 <div id="section-footer">
 
