--- a/detail-market.html
+++ b/detail-market.html
@@ -31,8 +31,8 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
-					<li><a href="cara-kerja.html">Cara Kerja</a></li>
-					<li class="active"><a href="market.html">Market Place</a></li>
+					<li><a href="explore-card.html">Explore</a></li>
+					<li class="active"><a href="market.html">MarketPlace</a></li>
 					<div class="login-register">
 						<li><a href="login.html">Login</a></li>
 						<li><a href="#">Or</a></li>
