--- a/explore-card.html
+++ b/explore-card.html
@@ -135,7 +135,7 @@
             <div class="dropdownmenu">
               <a class="link more" href="#"></a>
               <div class="dropdownkonten">
-                <a href="#">Report Campaign</a>
+                <a href="#">Report Card</a>
                 <a href="#">Report User</a>
                 <a href="#">Report Spam</a>
                 <a href="#">Lapor Penipuan</a>
@@ -188,7 +188,7 @@
         <div class="dropdownmenu">
           <a class="link more" href="#"></a>
           <div class="dropdownkonten">
-            <a href="#">Report Campaign</a>
+            <a href="#">Report Card</a>
             <a href="#">Report User</a>
             <a href="#">Report Spam</a>
             <a href="#">Lapor Penipuan</a>
@@ -243,7 +243,7 @@
     <div class="dropdownmenu">
       <a class="link more" href="#"></a>
       <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
+        <a href="#">Report Card</a>
         <a href="#">Report User</a>
         <a href="#">Report Spam</a>
         <a href="#">Lapor Penipuan</a>
@@ -297,7 +297,7 @@
             <div class="dropdownmenu">
               <a class="link more" href="#"></a>
               <div class="dropdownkonten">
-                <a href="#">Report Campaign</a>
+                <a href="#">Report Card</a>
                 <a href="#">Report User</a>
                 <a href="#">Report Spam</a>
                 <a href="#">Lapor Penipuan</a>
@@ -350,7 +350,7 @@
         <div class="dropdownmenu">
           <a class="link more" href="#"></a>
           <div class="dropdownkonten">
-            <a href="#">Report Campaign</a>
+            <a href="#">Report Card</a>
             <a href="#">Report User</a>
             <a href="#">Report Spam</a>
             <a href="#">Lapor Penipuan</a>
@@ -405,7 +405,7 @@
     <div class="dropdownmenu">
       <a class="link more" href="#"></a>
       <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
+        <a href="#">Report Card</a>
         <a href="#">Report User</a>
         <a href="#">Report Spam</a>
         <a href="#">Lapor Penipuan</a>
