--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="dropdownmenu">
               <a class="link more" href="#"></a>
               <div class="dropdownkonten">
-                <a href="#">Report Campaign</a>
+                <a href="#">Report Card</a>
                 <a href="#">Report User</a>
                 <a href="#">Report Spam</a>
                 <a href="#">Lapor Penipuan</a>
@@ -183,7 +183,7 @@
         <div class="dropdownmenu">
           <a class="link more" href="#"></a>
           <div class="dropdownkonten">
-            <a href="#">Report Campaign</a>
+            <a href="#">Report Card</a>
             <a href="#">Report User</a>
             <a href="#">Report Spam</a>
             <a href="#">Lapor Penipuan</a>
@@ -236,7 +236,7 @@
     <div class="dropdownmenu">
       <a class="link more" href="#"></a>
       <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
+        <a href="#">Report Card</a>
         <a href="#">Report User</a>
         <a href="#">Report Spam</a>
         <a href="#">Lapor Penipuan</a>
@@ -306,7 +306,7 @@
             <div class="dropdownmenu">
               <a class="link more" href="#"></a>
               <div class="dropdownkonten">
-                <a href="#">Report Campaign</a>
+                <a href="#">Report Card</a>
                 <a href="#">Report User</a>
                 <a href="#">Report Spam</a>
                 <a href="#">Lapor Penipuan</a>
@@ -359,7 +359,7 @@
         <div class="dropdownmenu">
           <a class="link more" href="#"></a>
           <div class="dropdownkonten">
-            <a href="#">Report Campaign</a>
+            <a href="#">Report Card</a>
             <a href="#">Report User</a>
             <a href="#">Report Spam</a>
             <a href="#">Lapor Penipuan</a>
@@ -412,7 +412,7 @@
     <div class="dropdownmenu">
       <a class="link more" href="#"></a>
       <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
+        <a href="#">Report Card</a>
         <a href="#">Report User</a>
         <a href="#">Report Spam</a>
         <a href="#">Lapor Penipuan</a>
@@ -467,7 +467,7 @@
         <div class="dropdownmenu">
           <a class="link more" href="#"></a>
           <div class="dropdownkonten">
-            <a href="#">Report Campaign</a>
+            <a href="#">Report Card</a>
             <a href="#">Report User</a>
             <a href="#">Report Spam</a>
             <a href="#">Lapor Penipuan</a>
@@ -520,7 +520,7 @@
     <div class="dropdownmenu">
       <a class="link more" href="#"></a>
       <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
+        <a href="#">Report Card</a>
         <a href="#">Report User</a>
         <a href="#">Report Spam</a>
         <a href="#">Lapor Penipuan</a>
@@ -573,7 +573,7 @@
     <div class="dropdownmenu">
       <a class="link more" href="#"></a>
       <div class="dropdownkonten">
-        <a href="#">Report Campaign</a>
+        <a href="#">Report Card</a>
         <a href="#">Report User</a>
         <a href="#">Report Spam</a>
         <a href="#">Lapor Penipuan</a>
@@ -594,6 +594,30 @@
 </div>
 <!-- ----------- -->
 
+<!-- 3 tahapan -->
+<div class="tata-cara">
+  <div class="container text-center">
+    <div class="row">
+      <h3>Tiga tahapan berinvestasi di Cerana</h3><br/>
+      <div class="col-md-4">
+        <h5>Buat / Pilih Investasi</h5><br/>
+        <img src="src/img/layer-7.png" alt=""><br/>
+        <p>Di Cerana anda bisa membuat atau memilih investasi,<br/> jika anda membuat maka anda memulai dengan membuat card pada cerana <br/> dan tunggu orang lain untuk ikut bersama anda, </br/> jika anda ingin ikut investasi properti orang lain anda tinggal memilih properti mana yang ada di website Cerana.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Dana Terkumpul</h5><br/>
+        <img src="src/img/layer-8.png" alt=""><br/>
+        <p>Ketika anda memilih atau membuat investasi maka tunggu sampai dana terkumpul,<br/> lalu cerana akan membeli properti tersebut, <br/> sehingga keamanan terjamin.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Kami Kelola</h5><br/>
+        <img src="src/img/lahan.png" width="200px" alt=""><br/>
+        <p>Properti yang anda kumpulkan akan kami kelola,<br/> sehingga anda cukup menunggu pada waktu yang tepat untuk mencairkan uang anda.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- 3 tahapan -->
 
 <div class="wrap">
   <div id="section-ayo">
