--- a/explore-card.html
+++ b/explore-card.html
@@ -156,7 +156,7 @@
      <div class="card">
       <div class="image-card" style="background:url(src/img/bangunan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
       <div class="content-card">
-        <h4><a href="#">Membangun Super Mall di Purwokerto</a></h4>
+        <h4><a href="#">Membeli Apartement di Purwokerto</a></h4>
         <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
       </div>
 
@@ -209,7 +209,7 @@
  <div class="card">
   <div class="image-card" style="background:url(src/img/properti-4.png);  background-size: 100%; background-repeat: no-repeat;"></div>
   <div class="content-card">
-    <h4><a href="#">Membangun Cafe and Restaurant di Teluk</a></h4>
+    <h4><a href="#">Membeli Rumah Mewah di Teluk</a></h4>
     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
   </div>
 
@@ -318,7 +318,7 @@
      <div class="card">
       <div class="image-card" style="background:url(src/img/bangunan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
       <div class="content-card">
-        <h4><a href="#">Membangun Super Mall di Purwokerto</a></h4>
+        <h4><a href="#">Membeli Gedung Ruko Purwokerto</a></h4>
         <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
       </div>
 
@@ -371,7 +371,7 @@
  <div class="card">
   <div class="image-card" style="background:url(src/img/properti-4.png);  background-size: 100%; background-repeat: no-repeat;"></div>
   <div class="content-card">
-    <h4><a href="#">Membangun Cafe and Restaurant di Teluk</a></h4>
+    <h4><a href="#">Membeli Kontrakan di Teluk</a></h4>
     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
   </div>
 
