--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="col-md-12">
         <h4>Top Trending</h4>
         <div class="bintang"></div>
-        <a class="lihat-semua" href="top-trending.html">Lihat Semua <span class="panah-kanan"></span></a>
+        <a class="lihat-semua" href="explore-card.html">Lihat Semua <span class="panah-kanan"></span></a>
       </div>
     </div>
 
@@ -151,7 +151,7 @@
      <div class="card">
       <div class="image-card" style="background:url(src/img/bangunan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
       <div class="content-card">
-        <h4><a href="#">Membangun Super Mall di Purwokerto</a></h4>
+        <h4><a href="#">Apartement di Purwokerto</a></h4>
         <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
       </div>
 
@@ -204,7 +204,7 @@
  <div class="card">
   <div class="image-card" style="background:url(src/img/properti-4.png);  background-size: 100%; background-repeat: no-repeat;"></div>
   <div class="content-card">
-    <h4><a href="#">Membangun Cafe and Restaurant di Teluk</a></h4>
+    <h4><a href="#">Membeli Kontrakan di Teluk</a></h4>
     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
   </div>
 
@@ -264,7 +264,7 @@
     <div class="row">
       <div class="col-md-12">
         <h4>Terbaru</h4>
-        <a class="lihat-semua" href="top-trending.html">Lihat Semua <span class="panah-kanan"></span></a>
+        <a class="lihat-semua" href="explore-card.html">Lihat Semua <span class="panah-kanan"></span></a>
       </div>
     </div>
 
@@ -327,7 +327,7 @@
      <div class="card">
       <div class="image-card" style="background:url(src/img/bangunan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
       <div class="content-card">
-        <h4><a href="#">Membangun Super Mall di Purwokerto</a></h4>
+        <h4><a href="#">Ayo kita bersama beli apartement di banyumas</a></h4>
         <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
       </div>
 
@@ -380,7 +380,7 @@
  <div class="card">
   <div class="image-card" style="background:url(src/img/properti-4.png);  background-size: 100%; background-repeat: no-repeat;"></div>
   <div class="content-card">
-    <h4><a href="#">Membangun Cafe and Restaurant di Teluk</a></h4>
+    <h4><a href="#">Membeli rumah mewah di Teluk</a></h4>
     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
   </div>
 
@@ -488,7 +488,7 @@
  <div class="card">
   <div class="image-card" style="background:url(src/img/bangunan.png);  background-size: 100%; background-repeat: no-repeat;"></div>
   <div class="content-card">
-    <h4><a href="#">Membangun Super Mall di Purwokerto</a></h4>
+    <h4><a href="#">Membeli apartement di purwokerto</a></h4>
     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
   </div>
 
@@ -541,7 +541,7 @@
  <div class="card">
   <div class="image-card" style="background:url(src/img/properti-4.png);  background-size: 100%; background-repeat: no-repeat;"></div>
   <div class="content-card">
-    <h4><a href="#">Membangun Cafe and Restaurant di Teluk</a></h4>
+    <h4><a href="#">Membeli Ruko ukuran besar Teluk</a></h4>
     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean cursus enim turpis, nec dapibus magna suscipit vel.</a></p>
   </div>
 
