--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <h1>CERANA</h1>
           <p class="italic">"Jangan menunggu untuk membeli properti, belilah properti dan tunggulah."</p>
           <p>Properti adalah satu dari pertahanan hebat terakhir yang mengizinkan jiwa kepengusahaan yang sesungguhnya. Cara menciptakan passive income lebh besar dari biaya hidup adalah dengan berinvestasi dalam bisnis properti.</p>
+          <a href="#">Investasi Sekarang</a>
         </div>
       </div>
     </div>
