--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cerana</title>
+	<title>Cerana| Investasi Property Terbesar Indonesia No.1</title>
   <script type="text/javascript" src="lib/js/jquery.js"></script>
   <link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css">
 
