--- a/dashboard-admin/daftar-report.html
+++ b/dashboard-admin/daftar-report.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../src/css/style.css">
 	<link rel="stylesheet" type="text/css" href="../src/css/style-dashboard.css">
 	<link rel="stylesheet" type="text/css" href="../src/css/style-dashboard-admin.css">
+	<link rel="stylesheet" type="text/css" href="../src/css/style-dashboard-user.css">
 </head>
 <body>
 	<div class="dashboard">
